5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1724_2524.log
== TEST (2019-05-14 11:18:59) 
-- CODE:
from math import*
x = int(input())
i = 4

while i<x:
	if i%2 == 0:
		p = sin(pi/i)/sin(3*pi/2*i)
	else:
		p = sin(pi/i)/sin(2*pi/i)
	print(i,round(p,4))
-- OUTPUT:
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -962327507652087.6
4 -9623275076
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:19:54) 
-- CODE:
from math import*
x = int(input())
i = 4

while i<x:
	if i%2 == 0:
		p = sin(pi/i)/sin(3*pi/2*i)
	else:
		p = sin(pi/i)/sin(2*pi/i)
	print(i,round(p,4))
	i += 1
-- OUTPUT:
4 -962327507652087.6
5 0.618
6 453645537588760.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:21:52) 
-- CODE:
from math import*
x = int(input())
i = 4

while i<=x:
	if i%2 == 0:
		p = (sin(pi/i))/(sin(3*pi/2*i))
	else:
		p = (sin(pi/i))/(sin(2*pi/i))
	print(i,round(p,4))
	i += 1
-- OUTPUT:
4 -962327507652087.6
5 0.618
6 453645537588760.2
7 0.555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:23:09) 
-- CODE:
from math import*
x = int(input())
i = 4

while i<=x:
	if i%2 == 0:
		p = (sin((pi/i)))/(sin((3*pi/2*i)))
	else:
		p = (sin(pi/i))/(sin(2*pi/i))
	print(i,round(p,4))
	i += 1
-- OUTPUT:
4 -962327507652087.6
5 0.618
6 453645537588760.2
7 0.555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:23:49) 
-- CODE:
from math import*
x = int(input())
i = 4

while i<=x:
	if i%2 == 0:
		p = sin(pi/i)/sin(3*pi/2*i)
	else:
		p = sin(pi/i)/sin(2*pi/i)
	print(i,round(p,4), pi)
	i += 1
-- OUTPUT:
4 -962327507652087.6 3.141592653589793
5 0.618 3.141592653589793
6 453645537588760.2 3.141592653589793
7 0.555 3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:26:19) 
-- CODE:
from math import*
x = int(input())
n = 4

while n<=x:
	if n%2 == 0:
		p = sin(pi/n)/sin(3*pi/2*n)
	else:
		p = sin(pi/n)/sin(2*pi/n)
	print(i,round(n,4))
	n += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(i,round(n,4))
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:26:23) 
-- CODE:
from math import*
x = int(input())
n = 4

while n<=x:
	if n%2 == 0:
		p = sin(pi/n)/sin(3*pi/2*n)
	else:
		p = sin(pi/n)/sin(2*pi/n)
	print(i,round(n,4))
	n += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(i,round(n,4))
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:26:36) 
-- CODE:
from math import*
x = int(input())
n = 4

while n<=x:
	if n%2 == 0:
		p = sin(pi/n)/sin(3*pi/2*n)
	else:
		p = sin(pi/n)/sin(2*pi/n)
	print(n,round(p,4))
	n += 1
-- OUTPUT:
4 -962327507652087.6
5 0.618
6 453645537588760.2
7 0.555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:28:12) 
-- CODE:
from math import*
x = int(input())
n = 4

while n<=x:
	if n%2 == 0:
		p = sin(radians(pi/n))/sin(radians(3*pi/2*n))
	else:
		p = sin(pi/n)/sin(2*pi/n)
	print(n,round(p,4))
	n += 1
-- OUTPUT:
4 0.0424
5 0.618
6 0.0193
7 0.555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:29:35) 
-- CODE:
from math import*
x = int(input())
n = 4

while n<=x:
	if n%2 == 0:
		p = sin(pi/radians(n))/sin(3*pi/radians(2*n))
	else:
		p = sin(pi/n)/sin(2*pi/n)
	print(n,round(p,4))
	n += 1
-- OUTPUT:
4 -0.8517
5 0.618
6 -1.1612
7 0.555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:30:28) 
-- CODE:
from math import*
x = int(input())
n = 4

while n<=x:
	if n%2 != 0:
		p = sin(pi/radians(n))/sin(3*pi/radians(2*n))
	else:
		p = sin(pi/n)/sin(2*pi/n)
	print(n,round(p,4))
	n += 1
-- OUTPUT:
4 0.7071
5 1.7749
6 0.5774
7 0.7173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:31:14) 
-- CODE:
from math import*
x = int(input())
n = 4

while n<=x:
	if n%2 != 0:
		p = sin(pi/radians(n))/sin(3*pi/radians(2*n))
	else:
		p = sin(pi/radians(n))/sin(2*pi/radians(n))
	print(n,round(p,4))
	n += 1
-- EXECUTION TIME:
0.215706
-- TEST CASE 1:
---- input:
7
---- correct output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
---- user output:
4 0.9518
5 1.7749
6 3.2415
7 0.7173
-- TEST CASE 2:
---- input:
5
---- correct output:
4 0.7071
5 0.7265
---- user output:
4 0.9518
5 1.7749
-- TEST CASE 3:
---- input:
16
---- correct output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
8 0.5412
9 0.684
10 0.5257
11 0.6782
12 0.5176
13 0.6749
14 0.5129
15 0.6728
16 0.5098
---- user output:
4 0.9518
5 1.7749
6 3.2415
7 0.7173
8 -0.5725
9 -0.924
10 0.7572
11 1.1003
12 -0.6582
13 1.0194
14 0.5219
15 0.7145
16 1.9866
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:31:18) 
-- CODE:
from math import*
x = int(input())
n = 4

while n<=x:
	if n%2 != 0:
		p = sin(pi/radians(n))/sin(3*pi/radians(2*n))
	else:
		p = sin(pi/radians(n))/sin(2*pi/radians(n))
	print(n,round(p,4))
	n += 1
-- OUTPUT:
4 0.9518
5 1.7749
6 3.2415
7 0.7173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:31:56) 
-- CODE:
from math import*
x = int(input())
n = 4

while n<=x:
	if n%2 != 0:
		p = sin(pi/radians(n))/sin(3*pi/radians(2*n))
	else:
		p = sin(pi/n)/sin(2*pi/n)
	print(n,round(p,4))
	n += 1
-- OUTPUT:
4 0.7071
5 1.7749
6 0.5774
7 0.7173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:32:11) 
-- CODE:
from math import*
x = int(input())
n = 4

while n<=x:
	if n%2 != 0:
		p = sin(pi/n)/sin(3*pi/2*n)
	else:
		p = sin(pi/n)/sin(2*pi/n)
	print(n,round(p,4))
	n += 1
-- EXECUTION TIME:
0.15744
-- TEST CASE 1:
---- input:
7
---- correct output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
---- user output:
4 0.7071
5 -0.5878
6 0.5774
7 0.4339
-- TEST CASE 2:
---- input:
5
---- correct output:
4 0.7071
5 0.7265
---- user output:
4 0.7071
5 -0.5878
-- TEST CASE 3:
---- input:
16
---- correct output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
8 0.5412
9 0.684
10 0.5257
11 0.6782
12 0.5176
13 0.6749
14 0.5129
15 0.6728
16 0.5098
---- user output:
4 0.7071
5 -0.5878
6 0.5774
7 0.4339
8 0.5412
9 -0.342
10 0.5257
11 0.2817
12 0.5176
13 -0.2393
14 0.5129
15 0.2079
16 0.5098
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:32:13) 
-- CODE:
from math import*
x = int(input())
n = 4

while n<=x:
	if n%2 != 0:
		p = sin(pi/n)/sin(3*pi/2*n)
	else:
		p = sin(pi/n)/sin(2*pi/n)
	print(n,round(p,4))
	n += 1
-- OUTPUT:
4 0.7071
5 -0.5878
6 0.5774
7 0.4339
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:33:17) 
-- CODE:
from math import*
x = int(input())
n = 4

while n<=x:
	if n%2 != 0:
		p = sin(pi/n)/sin((3*pi)/(2*n))
	else:
		p = sin(pi/n)/sin(2*pi/n)
	print(n,round(p,4))
	n += 1
-- OUTPUT:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:33:23) 
-- CODE:
from math import*
x = int(input())
n = 4

while n<=x:
	if n%2 != 0:
		p = sin(pi/n)/sin((3*pi)/(2*n))
	else:
		p = sin(pi/n)/sin(2*pi/n)
	print(n,round(p,4))
	n += 1
-- EXECUTION TIME:
0.216711
-- TEST CASE 1:
---- input:
7
---- correct output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
---- user output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
-- TEST CASE 2:
---- input:
5
---- correct output:
4 0.7071
5 0.7265
---- user output:
4 0.7071
5 0.7265
-- TEST CASE 3:
---- input:
16
---- correct output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
8 0.5412
9 0.684
10 0.5257
11 0.6782
12 0.5176
13 0.6749
14 0.5129
15 0.6728
16 0.5098
---- user output:
4 0.7071
5 0.7265
6 0.5774
7 0.6959
8 0.5412
9 0.684
10 0.5257
11 0.6782
12 0.5176
13 0.6749
14 0.5129
15 0.6728
16 0.5098
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
